--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ stringcase = "^1.2.0"
 numpy = "^1.25.2"
 pyproj = "^3.6.0"
 shapely = "^2.0.1"
+pandana = "^0.7"
+osmnet = "^0.1.7"
+matplotlib = "^3.7.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
